<?xml version="1.0"?>
<package>
  <name>husky_fei_simulator</name>
  <version>0.0.3</version>
  <description>The husky_fei_simulator package</description>

  <maintainer email="muhrix@gmail.com">Murilo F. M.</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_fei_gazebo</run_depend>
  <run_depend>husky_fei_gazebo_plugins</run_depend>

  <export><metapackage/></export>
</package>
